<resources>
    <string name="app_name">OMRKeep</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nome_app">Operação e Manutenção de Rede</string>
    <string name="operação_ne">Claro NE</string>
    <string name="texto_lorem_ipsum">Lorem ipsum purus id magna donec himenaeos nostra, nec primis risus himenaeos cras
        congue convallis consequat, nisl sollicitudin est hendrerit urna ornare. nunc pretium tincidunt diam vitae
        integer mauris scelerisque, ad sapien ultrices ac velit tempus ornare, ipsum suscipit fringilla sit dolor quam.
        torquent platea hendrerit ligula erat tellus volutpat sollicitudin, aliquet felis malesuada inceptos facilisis
        hac felis lacus, vestibulum donec taciti venenatis vel erat. ultricies sed eu vulputate etiam laoreet orci curae
        bibendum, habitant volutpat nisl lacus curae nec nisi, sed porta commodo aliquam ante egestas ornare. sem vitae
        etiam mauris morbi vulputate donec, cubilia adipiscing torquent ultrices dictum.
    </string>
    <string name="omrkeep_cancelar">Cancelar</string>
    <string name="atvidade_de_infra">Atividades de Infra</string>
    <string name="txt_melhorias">Melhorias</string>
    <string name="txt_atividades_pendentes">Atividades Pendentes</string>
    <string name="txt_reportar_problemas">Reportar Problemas</string>
    <string name="txt_preventivas">Preventivas</string>
    <string name="txt_omr_NE">OMR NE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_preventiva_infra">PreventivaInfraActivity</string>
    <string name="txtPerfil">Perfil</string>
    <string name="txt_editar_perfil">Editar Perfil</string>
    <string name="perfil_nome_perfil">perfil_nome_perfil</string>
    <string name="entrar">ENTRAR</string>
    <string name="string_entrar">Entrar</string>
</resources>
